--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,13 +3,13 @@ uvicorn==0.24.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
-tree-sitter==0.20.4
-tree-sitter-python==0.20.4
-tree-sitter-javascript==0.20.1
-tree-sitter-java==0.20.1
-tree-sitter-php==0.20.0
-tree-sitter-html==0.20.1
-tree-sitter-css==0.20.1
+tree-sitter==0.25.2
+tree-sitter-python>=0.23
+tree-sitter-javascript>=0.23
+tree-sitter-java>=0.21
+tree-sitter-php>=0.23
+tree-sitter-html>=0.23
+tree-sitter-css>=0.23
 requests==2.31.0
 aiofiles==23.2.1
 python-multipart==0.0.6
